test/data/fail/literals/numeric.js
07.0
//<>
0b01.0
//<>
"use strict"; 001;
//<>
"use strict"; 08;
//<>
function strict() { "use strict"; 001; }
//<>
function strict() { "use strict"; 08; }
